# dabapush

./: .gitignore  .gitmodules  README.md  config.yml  dabapush.yml  pyproject.toml
.github/workflows/: main.yml
dabapush/: Dabapush.py  Pipeline.py  __init__.py  create_subcommand.py  dabapush.py  discover_subcommand.py  main.py  read.py  reader.py  reader_subcommand.py  run_subcommand.py  update_subcommand.py  utils.py  writer_subcommand.py
dabapush/Attacher/: Attacher.py
dabapush/Configuration/: Configuration.py  ConfigurationError.py  FileWriterConfiguration.py  PlugInConfiguration.py  ProjectConfiguration.py  ReaderConfiguration.py  Registry.py  WriterConfiguration.py  __init__.py
dabapush/Reader/: NDJSONReader.py  Reader.py  TwacapicReader.py  __init__.py  tegracli_reader.py
dabapush/Writer/: CSVWriter.py  DBWriter.py  FacebookDBWriter.py  InstagramDBWriter.py  NDJSONWriter.py  NdjsonWriter.py  TwitterDBWriter.py  Writer.py  __init__.py
docs/: dabapush.md
docs/dabapush/: Dabapush.html  create_subcommand.html  discover_subcommand.html  index.html  main.html  reader_subcommand.html  run_subcommand.html  update_subcommand.html  utils.html  writer_subcommand.html
docs/dabapush/Configuration/: ConfigurationError.html  FileWriterConfiguration.html  PlugInConfiguration.html  ProjectConfiguration.html  ReaderConfiguration.html  Registry.html  WriterConfiguration.html  index.html
docs/dabapush/Reader/: NDJSONReader.html  Reader.html  TwacapicReader.html  index.html
docs/dabapush/Writer/: CSVWriter.html  DBWriter.html  NDJSONWriter.html  Writer.html  index.html
tests/: test_Dabapush.py  test_dabapush.py  test_package.py  test_reader.py
tests/Configuration/: test_Configuration.py  test_FileWriterConfiguration.py  test_ProjectConfiguration.py  test_Registry.py
tests/Reader/: test_TwacapicReader.py
tests/Writer/: test_FacebookDBWriter.py  test_InstagramDBWriter.py  test_Writer.py  test_stdout_writer.py
tests/utils/: generate_tweet.py
