[tool.poetry]
name = "dabapush"
version = "0.2.0"
description = ""
authors = ["Philipp Kessling <p.kessling@leibniz-hbi.de>", "Felix Victor Münch <f.muench@leibniz-hbi.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Leibniz-HBI/dabapush"
classifiers = [
		"Development Status :: 2 - Pre-Alpha",
		"Environment :: Console",
		"Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = ">3.8,<4.0"
click = "^8.1.3"
SQLAlchemy = "^1.4.22"
loguru = "^0.6.0"
PyYAML = "^6.0"

[tool.poetry.scripts]
dabapush = 'dabapush.dabapush:run'

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
coverage = "^6.4.2"
pdoc3 = "^0.10.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
