[tool.poetry]
name = "dabapush"
version = "0.2.1"
description = ""
authors = [
	"Philipp Kessling <p.kessling@leibniz-hbi.de>",
	"Aditya Kumar <a.kumar@leibniz-hbi.de>",
	"Felix Victor Münch <f.muench@leibniz-hbi.de>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Leibniz-HBI/dabapush"
classifiers = [
		"Development Status :: 2 - Pre-Alpha",
		"Environment :: Console",
		"Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = "*"
SQLAlchemy = "*"
loguru = "*"
pandas = "*"
PyYAML = "*"
importlib-metadata = "*"
ujson = "*"
psycopg2-binary = "*"

[tool.poetry.scripts]
dabapush = 'dabapush.main:cli'

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
coverage = "*"
pdoc3 = "*"
pre-commit = "*"
isort = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
	"invalid-name"
]

[tool.poetry.plugins.dabapush_readers]
"Twacapic" = "dabapush.Reader.TwacapicReader:TwacapicReaderConfiguration"
"NDJSON" = "dabapush.Reader.NDJSONReader:NDJSONReaderConfiguration"

[tool.poetry.plugins.dabapush_writers]
"CSV" = "dabapush.Writer.CSVWriter:CSVWriterConfiguration"
"NDJSON" = "dabapush.Writer.NDJSONWriter:NDJSONWriterConfiguration"
